# dda

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  dda-arch.drawio  dda-phase1-flow.drawio  dda-polling-flow.drawio  dda_basic.py  pyproject.toml  scenarios.py  test_components.py  test_integration.py
.claude/skills/drawio-chart/: SKILL.md
.claude/skills/drawio-chart/references/: design-spec.md
.claude/skills/rookiedb-safety/: SKILL.md
.claude/skills/rookiedb-safety/references/: bugs.md  constraints.md  per-file.md
dda/: __init__.py  connection.py  detector.py  executor.py  models.py  monitor.py  parser.py  selector.py  wfg.py
docs/: decisions.md  decisions_EN.md  design.md  design_EN.md  requirements.md  requirements_EN.md  rookiedb-changes.md
docs/superpowers/specs/: 2026-06-12-dda-phase1-design.md
