[project]
name = "dda"
version = "0.1.0"
description = "DB Deadlock Agent — 用 LLM 替代数据库内核固定规则做 deadlock victim selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["."]
norecursedirs = [".venv", ".claude", "docs", "dda", "__pycache__"]